--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -33,6 +33,10 @@ h1 {
   max-width: 100%;
 }
 
+.container figure a {
+  border-bottom: none;
+}
+
 .container a {
   color: #399f62;
   text-decoration: none;
@@ -54,6 +58,94 @@ h1 {
 .container .share-bottom {
   margin: 15px 0px 15px 0px;
 }
+
+.container .button {
+  z-index: -1;
+  border-bottom: 0;
+  top: 0;
+  right: 0;
+  background-color: transparent;
+  font-family:Arial, Helvetica, sans-serif;
+  font-size: 0.8em;
+  display: inline-block;
+  padding: 12px 16px 100% 100%;
+  border: none;
+  min-width: 100%;
+  color: transparent;
+  cursor: default;
+  text-transform: uppercase;
+  position: fixed;
+  font-weight: 700;
+}
+
+.container .button-x {
+  border: none;
+  border-bottom: 0;
+  position: absolute;
+  right: -35px;
+  top: -30px;
+  width: 30px;
+  height: 30px;
+  background-color: #222;
+  color: #fff;
+  font-family:Arial, Helvetica, sans-serif;
+  font-size: 0.8em;
+  font-weight: 600;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+}
+.popup {
+  z-index: 1;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.4s;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.705);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+}
+
+.popup-inner {
+  z-index: 1;
+  display: block;
+  max-width: 87vh;
+  max-height: 87%;
+  position: fixed;
+  background-color: rgb(255, 255, 255);
+  padding: 10px 16px;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.226);
+  border-radius: 10px;
+}
+
+.popup-inner h3 {
+  color: #666;
+  font-size: 24px;
+  margin-bottom: 16px;
+}
+
+.popup-inner p img {
+  color: #888;
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 16px;
+  max-width:100%;
+  max-height: 100%;
+}
+
+.popup:target {
+  opacity: 1;
+  pointer-events: all;
+}
+
 @media screen and (max-width : 760px) {
   .container {
     display: block;
@@ -72,5 +164,43 @@ h1 {
     border-color: #E3E0CF;
     border-width: 2px;
     text-align: center;
+  }
+  .popup-inner {
+    display: block;
+    max-width: 55vh;
+    max-height: 65%;
+    position: fixed;
+    background-color: rgb(255, 255, 255);
+    padding: 10px 16px;
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.226);
+    border-radius: 10px;
+  }
+
+  .popup-inner p img {
+    color: #888;
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 16px;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .container .button {
+    z-index: -1;
+    border-bottom: 0;
+    top: 0;
+    right: 0;
+    background-color: transparent;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 0.8em;
+    display: inline-block;
+    padding: 12px 16px 100vh 100%;
+    border: none;
+    min-width: 100%;
+    color: transparent;
+    cursor: default;
+    text-transform: uppercase;
+    position: fixed;
+    font-weight: 700;
   }
 }
