assets: css: list_block: animating list items
The idea is to have a simple composition of elements for the
lists, the main title, and a secondary title that are animated
on hover, using only CSS transitions and animations.

Signed-off-by: Aquila Macedo <aquilamacedo@riseup.net>

--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -1,9 +1,10 @@
 <li>
   <h2>
-      <a href="{{ site.url }}{{ post.url }}" class="post-title">
-      <span>{{ post.title | markdownify | remove: "<p>" | remove: "</p>" }}</span>
+    <a href="{{ site.url }}{{ post.url }}" class="post-title">
+      <div class="ca-content">
+        <h2 class="ca-main">{{ post.title }}</h2>
+        <h3 class="ca-sub">{{ post.date | date: '%d %b %Y' }}</h3>
+      </div>
     </a>
-    <br>
-    <span class="date">{{ post.date | date: '%d %b %Y' }}</span>
   </h2>
 </li>
